cmake_minimum_required(VERSION 2.8)
include(${PROJECT_SOURCE_DIR}/env.txt)
include(${PROJECT_SOURCE_DIR}/env_def.txt)

if(PF STREQUAL "x86")
	set(LINK_LIBS imatrix_rpc qsfp_agent)
else()
	set(LINK_LIBS imatrix_rpc qsfp_agent imc msgpack)
endif()

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} LIB_SRC)
include_directories(${INC_DIR})
link_directories(${LIB_DIR})
link_libraries(${LINK_LIBS}) 
add_library(srvapi ${LIB_SRC})
